# ghfs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  agents.md  dist-workspace.toml  flake.nix
.github/workflows/: publish-crates.yml  release.yml
crates/ghfs/: Cargo.toml
crates/ghfs-cache/: Cargo.toml
crates/ghfs-cache/src/: git.rs  lib.rs  lock.rs  paths.rs  repo.rs  staleness.rs  swap.rs
crates/ghfs-fs/: Cargo.toml
crates/ghfs-fs/src/: inode.rs  lib.rs
crates/ghfs-types/: Cargo.toml
crates/ghfs-types/src/: lib.rs
crates/ghfs/src/: main.rs
nix/: hm-module.nix  nixos-module.nix
src/: lib.rs  main.rs  service.rs  types.rs
src/cache/: git.rs  lock.rs  managed.rs  mod.rs  negative.rs  paths.rs  repo.rs  staleness.rs  swap.rs
src/cli/: client.rs  mod.rs  status.rs  status_tui.rs  tui.rs
src/daemon/: backfill.rs  gc.rs  mod.rs  scheduler.rs  socket.rs  state.rs  worker.rs
src/fs/: inode.rs  mod.rs  nfs.rs
src/protocol/: messages.rs  mod.rs  rpc.rs
src/store/: blob.rs  git.rs  mod.rs  ref_selector.rs  store.rs  tree.rs
tests/: store_read_pipeline.rs
