[package]
name = "ghfs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
dashmap = "6"
dirs = "6"
env_logger = "0.11"
fs2 = "0.4"
fuser = "0.15"
git2 = { version = "0.19", default-features = false }
libc = "0.2"
log = "0.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
