[package]
name = "ghfs"
version = "0.0.2"
edition = "2024"
description = "Mount GitHub repositories as a local filesystem"
license = "MIT"
repository = "https://github.com/rgodha24/ghfs"
homepage = "https://github.com/rgodha24/ghfs"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = "3.5.1"
dashmap = "6"
dirs = "6"
env_logger = "0.11"
fs2 = "0.4"
git2 = { version = "0.19", default-features = false }
libc = "0.2"
log = "0.4"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
ureq = "2"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.15", default-features = false, features = ["abi-7-19"] }

[target.'cfg(target_os = "macos")'.dependencies]
async-trait = "0.1"
nfsserve = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

[dev-dependencies]
filetime = "0.2"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
