[package]
name = "ghfs-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
ghfs-types = { path = "../ghfs-types" }
# Only using libgit2 for local read operations (open, resolve refs, exists check).
# HTTPS operations (clone, fetch) are done via CLI for shallow clone support.
git2 = { version = "0.19", default-features = false }
thiserror = "2"

[dev-dependencies]
filetime = "0.2"
tempfile = "3"
